// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core/graph toJSON / fromJSON snapshot testing a graph with a dangling edge 1`] = `
Array [
  Object {
    "type": "sourcecred/graph",
    "version": "0.8.0",
  },
  Object {
    "edges": Array [
      Object {
        "address": Array [
          "edge",
        ],
        "dstIndex": 0,
        "srcIndex": 1,
        "timestampMs": 0,
      },
    ],
    "nodes": Array [],
    "sortedNodeAddresses": Array [
      Array [
        "dst",
      ],
      Array [
        "src",
      ],
    ],
  },
]
`;

exports[`core/graph toJSON / fromJSON snapshot testing a trivial graph 1`] = `
Array [
  Object {
    "type": "sourcecred/graph",
    "version": "0.8.0",
  },
  Object {
    "edges": Array [
      Object {
        "address": Array [
          "edge",
        ],
        "dstIndex": 0,
        "srcIndex": 1,
        "timestampMs": 0,
      },
      Object {
        "address": Array [
          "wat",
        ],
        "dstIndex": 0,
        "srcIndex": 1,
        "timestampMs": 0,
      },
    ],
    "nodes": Array [
      Object {
        "description": "dst",
        "index": 0,
        "timestampMs": null,
      },
      Object {
        "description": "src",
        "index": 1,
        "timestampMs": null,
      },
    ],
    "sortedNodeAddresses": Array [
      Array [
        "dst",
      ],
      Array [
        "src",
      ],
    ],
  },
]
`;

exports[`core/graph toJSON / fromJSON snapshot testing an advanced graph 1`] = `
Array [
  Object {
    "type": "sourcecred/graph",
    "version": "0.8.0",
  },
  Object {
    "edges": Array [
      Object {
        "address": Array [
          "full-dangling",
        ],
        "dstIndex": 4,
        "srcIndex": 4,
        "timestampMs": 0,
      },
      Object {
        "address": Array [
          "half-dangling",
        ],
        "dstIndex": 4,
        "srcIndex": 1,
        "timestampMs": 0,
      },
      Object {
        "address": Array [
          "hom",
          "1",
        ],
        "dstIndex": 0,
        "srcIndex": 5,
        "timestampMs": 0,
      },
      Object {
        "address": Array [
          "hom",
          "2",
        ],
        "dstIndex": 0,
        "srcIndex": 5,
        "timestampMs": 0,
      },
      Object {
        "address": Array [
          "loop",
        ],
        "dstIndex": 3,
        "srcIndex": 3,
        "timestampMs": 0,
      },
    ],
    "nodes": Array [
      Object {
        "description": "dst",
        "index": 0,
        "timestampMs": null,
      },
      Object {
        "description": "halfIsolated",
        "index": 1,
        "timestampMs": null,
      },
      Object {
        "description": "isolated",
        "index": 2,
        "timestampMs": null,
      },
      Object {
        "description": "loop",
        "index": 3,
        "timestampMs": null,
      },
      Object {
        "description": "src",
        "index": 5,
        "timestampMs": null,
      },
    ],
    "sortedNodeAddresses": Array [
      Array [
        "dst",
      ],
      Array [
        "halfIsolated",
      ],
      Array [
        "isolated",
      ],
      Array [
        "loop",
      ],
      Array [
        "phantom",
      ],
      Array [
        "src",
      ],
    ],
  },
]
`;
